added comments, removed unnecessary code, added jpg for tab icon

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon</title>
+    <title>Horiseon</title> <!-- adjusted title and added an icon for tab -->
     <link rel="icon" href="./assets/images/seo.jpg" type="image/x-icon">
 </head>
 
@@ -26,6 +26,7 @@
         </nav>
     </header>
     <div class="hero">
+        <!-- added a description of the image for accessibility. It was the best answer I had at the time -->
         <div class="description">Image: Four people in a meeting with the man at the head of the table standing, and looking intently at some papers.</div>
     </div>
     <main>
